SERVER-24994 Check in Helpers::removeRange() if shard key index dropped.