jstests/concurrency/fsm_all.js
@@ -4,7 +4,12 @@ load('jstests/concurrency/fsm_libs/runner.js');
 
 var dir = 'jstests/concurrency/fsm_workloads';
 
-var blacklist = [].map(function(file) {
+var blacklist = [
+    // Disabled due to MongoDB restrictions and/or workload restrictions
+
+    // This workload assumes it is running against a sharded cluster.
+    'sharded_moveChunk_drop_shard_key_index.js',
+].map(function(file) {
     return dir + '/' + file;
 });
 
