jstests/concurrency/fsm_all_simultaneous.js
@@ -14,6 +14,9 @@ var blacklist = [
 
     'agg_group_external.js',  // uses >100MB of data, which can overwhelm test hosts
     'agg_sort_external.js',   // uses >100MB of data, which can overwhelm test hosts
+
+    // This workload assumes it is running against a sharded cluster.
+    'sharded_moveChunk_drop_shard_key_index.js',
 ].map(function(file) {
     return dir + '/' + file;
 });
